--- a/main.html
+++ b/main.html
@@ -92,7 +92,9 @@
 					<div class="threads" data-player>
 						<div class="threads_item">
 							<div class="thread">
-								<a href="" class="thread_image" style="background-image: url(img/image.jpg)"></a>
+								<a href="" class="thread_image">
+									<img src="img/image.jpg" alt="">
+								</a>
 								
 								<div class="thread_pic">
 									<img src="img/pic.png" alt="">
