--- a/main.html
+++ b/main.html
@@ -377,6 +377,11 @@
 		</div>
 	</div>
 
+	<div class="flash-massage __visible">
+		<div class="flash-massage_text">some text</div>
+		<div class="flash-massage_close"></div>
+	</div>
+
 	<div class="form-block __map mfp-hide" id="form-map">
 		<div class="form-block_head __dark">Местоположение</div>
 		
