--- a/profile.html
+++ b/profile.html
@@ -68,7 +68,7 @@
 							</div>
 						</div>
 						
-						<div class="threads" data-player>
+						<div class="threads __masonry" data-player>
 							<div class="threads_item __col-2">
 								<div class="thread">
 									<a href="" class="thread_image" style="background-image: url(img/image.jpg)"></a>
@@ -372,6 +372,7 @@
 	<script src="js/jquery.scrollbar.min.js"></script>
 	<script src="js/audioplayer.js"></script>
 	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/lib.js"></script>
 	<script src="js/app.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3tlWbCcY4vawcqAwJgbWjP3DqboRywNY&libraries=places&callback=initMap" async defer></script>
