--- a/create-post.html
+++ b/create-post.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/select2.min.css">
 	<link rel="stylesheet" href="css/jquery.scrollbar.css">
