--- a/main.html
+++ b/main.html
@@ -29,6 +29,11 @@
 					<a href="" class="left-bar_button">
 						<img src="img/profile.svg" width="18" alt="">
 					</a>
+                    
+                    <div class="left-bar_langs">
+                        <a href="" class="left-bar_lang active">RU</a>
+                        <a href="" class="left-bar_lang">EN</a>
+                    </div>
 				</div>
 			</aside>
 			
