--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		<li><a target="_blank" href="profile.html">Профиль</a></li>
 		<li><a target="_blank" href="edit-profile.html">Редактирование профиля</a></li>
 		<li><a target="_blank" href="followers.html">Подписчики</a></li>
+		<li><a target="_blank" href="about.html">О нас</a></li>
 	</ol>
 </body>
 </html>
