--- a/profile.html
+++ b/profile.html
@@ -34,6 +34,11 @@
 						<a href="#form-audio" class="profile-info_ico __audio popup"></a>
 					</div>
 					
+					<div class="profile-info_user" href="/users/122">
+						<img src="https://rumor-web.iuic.info/uploads/user/image/122/thumb_unnamed.jpg" alt="Thumb unnamed">
+						<span>"Революция сознания"</span>
+					</div>
+					
 					<div class="profile-info_links">
 						<div class="profile-info_link">
 							<a href="">Подписки:</a>
