--- a/about.html
+++ b/about.html
@@ -64,6 +64,48 @@
 		</div>
 	</div>
 
+	<div class="content">
+		<div class="footer">
+			<div class="content_main">
+				<div class="footer_row">
+					<div class="footer_item __1">
+						<ul class="footer_list">
+							<li><a href="">Все публикации</a></li>
+						</ul>
+					</div>
+					<div class="footer_item __2">
+						<div class="footer_text">Скачать мобильное приложение <strong>Rumor:</strong></div>
+						
+						<div class="footer_apps">
+							<div class="footer_app">
+								<a href="">
+									<img src="img/app-store.png" alt="">
+								</a>
+								<a href="">
+									<img src="img/code.png" alt="">
+								</a>
+							</div>
+							<div class="footer_app">
+								<a href="">
+									<img src="img/google-play.png" alt="">
+								</a>
+								<a href="">
+									<img src="img/code.png" alt="">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="footer_item __3">
+						<ul class="footer_list">
+							<li><a href="">О проекте</a></li>
+							<li class="active"><a href="">iuic.info@iuic.info</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="form-block __map mfp-hide" id="form-map">
 		<div class="form-block_head __dark">Местоположение</div>
 		
