--- a/main.html
+++ b/main.html
@@ -117,6 +117,8 @@
 									<div class="thread_bottom">
 										<div class="thread_info">5 дней назад</div>
 										
+										<div class="thread_view">578</div>
+										
 										<div class="thread_like">
 											<div class="thread_like-count">345</div>
 											<a href="" class="thread_favorite active"></a>
@@ -391,6 +393,14 @@
 	<div class="flash-massage">
 		<div class="flash-massage_text">some text</div>
 		<div class="flash-massage_close"></div>
+	</div>
+	
+	<div class="form-info mfp-hide" id="safari-info">
+		<div class="form-info_close popup-close"></div>
+		
+		<div class="form-info_image"></div>
+		
+		<div class="form-info_text">К сожалению браузер Safari с большим опозданием начинает воспроизводить аудио. <br>Пожалуйста, воспользуйтесь любым другим браузером.</div>
 	</div>
 
 	<div class="form-block __map mfp-hide" id="form-map">
