--- a/view.html
+++ b/view.html
@@ -80,6 +80,8 @@
 										<div class="post_address">Университетская ул., 23б Харьков Харьковская область</div>
 										
 										<div class="post_bottom">
+											<div class="post_view">576</div>
+											
 											<div class="post_player">
 												<div class="post_player-main">
 													<audio style="opacity: 0;" src="music.mp3" preload="none" controls></audio>
