--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="hide-leftbar">
 
 	<aside class="left-bar">
 		<a href="" class="logo">
