--- a/edit-profile.html
+++ b/edit-profile.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="hide-leftbar">
 
 	<div class="wrapper">
 		<div class="container">
