--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="hide-leftbar">
 
 	<div class="wrapper">
 		<div class="container">
@@ -24,10 +24,10 @@
 				</a>
 				
 				<div class="left-bar_buttons">
-					<a href="" class="left-bar_button">
+					<a href="" class="left-bar_button __login">
 						<img src="img/login.svg" width="17" alt="">
 					</a>
-					<a href="" class="left-bar_button">
+					<a href="" class="left-bar_button __profile">
 						<img src="img/profile.svg" width="18" alt="">
 					</a>
                     
