--- a/about.html
+++ b/about.html
@@ -30,6 +30,62 @@
 			</a>
 		</div>
 	</aside>
+
+	<div class="header __mobile-only __padding">
+		<div class="header_left">
+			<ul class="header_nav">
+				<li class="active">
+					<a href="">ВСЕ ПУБЛИКАЦИИ</a>
+				</li>
+				<li>
+					<a href="">ПОДПИСКИ</a>
+				</li>
+			</ul>
+		</div>
+		<div class="header_right">
+			<div class="header_search">
+				<div class="header_search-ico"></div>
+				<form class="header_search-form">
+					<input type="text" class="header_search-input" placeholder="Поиск">
+				</form>
+			</div>
+			
+			<div class="header_themes">
+				<div class="header_themes-button">ВСЕ ТЕМЫ</div>
+				
+				<ul class="header_themes-dropdown">
+					<li class="active"><a href="">Все темы</a></li>
+					<li><a href="">Светская жизнь</a></li>
+					<li><a href="">Обучение</a></li>
+					<li><a href="">События и мнения</a></li>
+					<li><a href="">Экономика и бизнес</a></li>
+					<li><a href="">Политика</a></li>
+					<li><a href="">Собтвенная жизнь</a></li>
+					<li><a href="">Спорт</a></li>
+					<li><a href="">Здоровье</a></li>
+					<li><a href="">Питание</a></li>
+					<li><a href="">Красота и мода</a></li>
+					<li><a href="">Путешествия</a></li>
+					<li><a href="">Автомобили</a></li>
+					<li><a href="">Дети</a></li>
+					<li><a href="">Юмор</a></li>
+					<li><a href="">Фильмы</a></li>
+					<li><a href="">Искусство и творчество</a></li>
+					<li><a href="">Животные</a></li>
+					<li><a href="">Лекции</a></li>
+					<li><a href="">Наука и исследования</a></li>
+					<li><a href="">Духовность и религия </a></li>
+					<li><a href="">Истории</a></li>
+					<li><a href="">Музыка</a></li>
+					<li><a href="">Авторские треки</a></li>
+					<li><a href="">Интервью</a></li>
+					<li><a href="">Обращения</a></li>
+				</ul>
+			</div>
+			
+			<a href="" class="header_create-btn">Создать публикацию</a>
+		</div>
+	</div>
 			
 	<div class="about">
 		<div class="about_content">
