--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 				</ul>
 			</div>
 			
-			<a href="" class="header_create-btn">Создать публикацию</a>
+			<a href="" class="header_back __header">Вернуться в ленту</a>
 		</div>
 	</div>
 			
